--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,9 @@ name: Playwright Test Pipeline
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
