--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "main": "index.js",
 "scripts": {
-  "test:local": "cross-env DOTENV_CONFIG_PATH=.env.local node playwright-run.cjs",
-  "test:dev": "cross-env DOTENV_CONFIG_PATH=.env.dev node playwright-run.cjs",
-  "test:qa":  "cross-env DOTENV_CONFIG_PATH=.env.qa node playwright-run.cjs",
-  "test:prod":"cross-env DOTENV_CONFIG_PATH=.env.prod node playwright-run.cjs"
+  "test": "node playwright-run.cjs",
+      "test:local": "npm run test -- local",
+      "test:dev": "npm run test -- dev",
+      "test:qa": "npm run test -- qa",
+      "test:prod": "npm run test -- prod"
 },
   "keywords": [],
   "author": "",
